WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118515
8 bytes memory leaks in WebProcessMainQt.cpp when proxy is initialized
https://bugs.webkit.org/show_bug.cgi?id=118515
Summary
8 bytes memory leaks in WebProcessMainQt.cpp when proxy is initialized
Minju Kim
Reported
2013-07-09 10:56:50 PDT
8 bytes memory leaks in WebProcessMainQt.cpp when proxy is initialized
Attachments
Patch
(1.49 KB, patch)
2013-07-09 11:06 PDT
,
Minju Kim
no flags
Details
Formatted Diff
Diff
Patch
(1.50 KB, patch)
2013-07-09 11:13 PDT
,
Minju Kim
no flags
Details
Formatted Diff
Diff
Patch
(1.79 KB, patch)
2013-07-09 12:07 PDT
,
Minju Kim
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Minju Kim
Comment 1
2013-07-09 11:06:46 PDT
Created
attachment 206344
[details]
Patch
WebKit Commit Bot
Comment 2
2013-07-09 11:08:07 PDT
Attachment 206344
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit2/WebProcess/qt/WebProcessMainQt.cpp']" exit_code: 1 Source/WebKit2/ChangeLog:10: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Minju Kim
Comment 3
2013-07-09 11:13:02 PDT
Created
attachment 206345
[details]
Patch
Chris Dumez
Comment 4
2013-07-09 11:14:36 PDT
Comment on
attachment 206345
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=206345&action=review
> Source/WebKit2/WebProcess/qt/WebProcessMainQt.cpp:140 > + delete proxyFactory;
You might want to use OwnPtr and QNetworkProxyFactory::setApplicationProxyFactory(proxyFactory.leakPtr()); to avoid manual memory handling.
Minju Kim
Comment 5
2013-07-09 12:07:59 PDT
Created
attachment 206346
[details]
Patch
Chris Dumez
Comment 6
2013-07-09 12:36:44 PDT
Comment on
attachment 206346
[details]
Patch Looks good, r=me.
Minju Kim
Comment 7
2013-07-09 14:38:41 PDT
Thanks (In reply to
comment #6
)
> (From update of
attachment 206346
[details]
) > Looks good, r=me.
Minju Kim
Comment 8
2013-09-25 22:56:33 PDT
What else can I do to make it landing? Is there anyone to help me about it?
Gyuyoung Kim
Comment 9
2013-09-25 23:05:33 PDT
Comment on
attachment 206346
[details]
Patch Though I'm not a QT port developer, this patch looks good.
Gyuyoung Kim
Comment 10
2013-09-25 23:08:18 PDT
(In reply to
comment #8
)
> What else can I do to make it landing? Is there anyone to help me about it?
Do not change bug status with "Resolved Fixed" manually. commit bot will change the status after landing. See also
https://bugs.webkit.org/page.cgi?id=fields.html#status
WebKit Commit Bot
Comment 11
2013-09-25 23:32:04 PDT
Comment on
attachment 206346
[details]
Patch Clearing flags on attachment: 206346 Committed
r156449
: <
http://trac.webkit.org/changeset/156449
>
WebKit Commit Bot
Comment 12
2013-09-25 23:32:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug