8 bytes memory leaks in WebProcessMainQt.cpp when proxy is initialized https://bugs.webkit.org/show_bug.cgi?id=118515

Patch by Minju Kim <pmuarteo@gmail.com> on 2013-09-25
Reviewed by Christophe Dumez.

* WebProcess/qt/WebProcessMainQt.cpp:
(WebKit::initializeProxy): Handled EnvHttpProxyFactory by using OwnPtr
to avoid memory leak when it isn't handled by NetworkProxyFactory

Canonical link: https://commits.webkit.org/139954@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156449 268f45cc-cd09-0410-ab3c-d52691b4dbfc